// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alerter component handles dismiss provided to buttonAction 1`] = `
<div
  className="styles__c-alert___dJvZ8 styles__c-alert--hidden___2HD9e"
  role="alert"
>
  <div
    className="styles__c-alert-wrapper___1VWFK styles__c-alert--info___2EDwe"
  >
    <p>
      Test alert with button
    </p>
    <DefaultButton
      className="styles__c-btn--alert-info___1xAkg"
      label="BTN"
      onClick={[Function]}
      size="tiny"
    />
  </div>
</div>
`;

exports[`Alerter component renders button if buttonText provided 1`] = `
<div
  className="styles__c-alert___dJvZ8 styles__c-alert--hidden___2HD9e"
  role="alert"
>
  <div
    className="styles__c-alert-wrapper___1VWFK styles__c-alert--info___2EDwe"
  >
    <p>
      Test alert with button
    </p>
    <DefaultButton
      className="styles__c-btn--alert-info___1xAkg"
      label="BTN"
      onClick={[Function]}
      size="tiny"
    />
  </div>
</div>
`;

exports[`Alerter component renders correctly an error alert 1`] = `
<div
  className="styles__c-alert___dJvZ8 styles__c-alert--hidden___2HD9e"
  role="alert"
>
  <div
    className="styles__c-alert-wrapper___1VWFK styles__c-alert--error___g5tIs"
  >
    <p>
      Test error alert
    </p>
  </div>
</div>
`;

exports[`Alerter component renders correctly an info alert 1`] = `
<div
  className="styles__c-alert___dJvZ8 styles__c-alert--hidden___2HD9e"
  role="alert"
>
  <div
    className="styles__c-alert-wrapper___1VWFK styles__c-alert--info___2EDwe"
  >
    <p>
      Test info alert
    </p>
  </div>
</div>
`;

exports[`Alerter component renders correctly an success alert 1`] = `
<div
  className="styles__c-alert___dJvZ8 styles__c-alert--hidden___2HD9e"
  role="alert"
>
  <div
    className="styles__c-alert-wrapper___1VWFK styles__c-alert--success___2DGDO"
  >
    <p>
      Test success alert
    </p>
  </div>
</div>
`;
